# qtturnblack

./: .gitignore  CMakeLists.txt  qtturnblack.qrc
output/: includeme.cmake  makeme.cmake
resource/style/gray/: Base.css  QCheckBox.css  QDateTimeEdit.css  QGroupBox.css  QKeySequenceEdit.css  QLineEdit.css  QMenu.css  QMenuBar.css  QPlainTextEdit.css  QProgressBar.css  QPushButton.css  QSlider.css  QSpinBox.css  QTabBar.css  QTabWidget.css  QTextBrowser.css  QTextEdit.css  QWidget.css
resource/style/xxx/: Base.css  QComboBox.css  QDateTimeEdit.css  QDialog.css  QFrame.css  QListWidget.css  QMainWindow.css  QMenu.css  QRadioButton.css  QScrollArea.css  QScrollBar.css  QStatusBar.css  QTableWidget.css  QToolButton.css  QToolTip.css  QTreeWidget.css
resource/tmp/: gray-origin.css  gray.css  o.css
src/: qtturnblack.cpp  qtturnblack.h  qtturnblack_global.h
